😽🍍 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -24,3 +24,34 @@ Select ONE Additional Feature to Add
         
     </body>
 </html>
+
+<html>
+  <head>
+    <meta charset="utf-8"/>
+    <title> Unit 2 project</title>
+    <style>
+    h2 {color: rgb(255,204,153) }
+      body { background color: grey;}
+      p{color: rgb(240,203,129)}
+      img{
+        border: 5px solid #f0cb
+      }
+    
+    </style>
+  </head>
+  <body>
+    <h1>
+      Inside of the Walls.
+    </h1>
+    <img
+         src="https://wallpapers.com/images/featured/attack-on-titan-pictures-uk5xzd7go5nb00sj.jpg"
+         alt="attack on titan"
+         width="400"br/>
+    <h2>
+      The ancient history  of the walls
+    </h2>
+    <p>
+      The 144th king of Eldia took the remaining survivors to Paradise Island, and with his <strong>Founding Titan </strong>he summoned hundres of Colossial Titans and positoned them withing a wall like shape and made them harden.The walls are about 50 meters high andacts as an defense barrier. 
+    </p>
+  </body>
+</html>
